--- a/Kaggle_titanic.ipynb
+++ b/Kaggle_titanic.ipynb
@@ -289,15 +289,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ireh5mtgD2hD"
-      },
-      "source": [
-        "# 讀取資料、查看基本訊息 Import data 、View basic information\n"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -332,6 +323,7 @@
         }
       ],
       "source": [
+        "# 讀取資料、查看基本訊息 Import data 、View basic information\n",
         "df_train.isna().sum()"
       ]
     },
@@ -63957,7 +63949,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "gpI3ZPKn8rhs"
+        "id": "1VQhflkm9271"
       },
       "outputs": [],
       "source": [
@@ -64530,8 +64522,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "WYHmVx8J8rht",
-        "outputId": "5fd57c04-31b0-41c1-d440-f40cfc4b44f5"
+        "id": "38EK9zIb9272",
+        "outputId": "c933c8d1-4312-4d28-c4f1-86cc5d4970ea"
       },
       "outputs": [
         {
@@ -64681,8 +64673,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "DiTjFCY-8rhu",
-        "outputId": "caa1d07a-9a34-4b33-a9ac-05786039b68b"
+        "id": "DyYEcPfZ9273",
+        "outputId": "c35fa046-faac-4fb1-ad83-3b436d6cd724"
       },
       "outputs": [
         {
@@ -64901,8 +64893,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "0GN7gYL68rhu",
-        "outputId": "3e724750-7ef2-406c-ce9c-6ca2e37840d1"
+        "id": "3eZypgOZ9273",
+        "outputId": "a8fc61e7-9553-4bdf-f27d-0e3d897e7663"
       },
       "outputs": [
         {
@@ -65311,8 +65303,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "jWf98Sx98rhu",
-        "outputId": "c069058e-ab82-4a85-a170-c4c18b729002"
+        "id": "cd_RFhsO9274",
+        "outputId": "e0e24b93-403c-4879-d31e-37a434999e9b"
       },
       "outputs": [
         {
@@ -65350,8 +65342,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "7sdblGgT8rhu",
-        "outputId": "4d264fb8-4ace-4f72-f583-e44b6a475383"
+        "id": "Dc-xp0OA9274",
+        "outputId": "57a581f1-0a47-4a0b-949a-09cdd3171f3a"
       },
       "outputs": [
         {
