--- a/Kaggle_titanic_超參數.ipynb
+++ b/Kaggle_titanic_超參數.ipynb
@@ -23464,7 +23464,7 @@
         "study = optuna.create_study(sampler=sampler, direction='minimize')\n",
         "\n",
         "# 開始優化\n",
-        "study.optimize(target_func, n_trials=5). # 可以設個100次\n",
+        "study.optimize(target_func, n_trials=5) # 可以設個100次\n",
         "\n",
         "print('Best hyperparameters:', study.best_params)\n",
         "print('Best value:', study.best_value)"
